@@ -179,11 +179,10 @@ WIDGET_DEFAULT = {
         "font_color_temperature": "#000000",
         "bkg_color_temperature": "#222222",
         "show_average": True,
-        "highlight_duration": 5,
+        "average_sampling_duration": 10,
+        "off_brake_duration": 1,
         "font_color_average": "#AAAAAA",
         "bkg_color_average": "#222222",
-        "font_color_highlighted": "#000000",
-        "bkg_color_highlighted": "#BBBBBB",
         "column_index_temperature": 1,
         "column_index_average": 2,
     },
