@@ -1,7 +1,13 @@
 WIP
 -----------------------------
+* Brake temperature Widget
+  - [New]Reworked average brake temperature calculation to more accurately reflect average temperature change under braking. Average brake temperature is now calculated from most recent braking period. The braking period is defined by "average_sampling_duration" and "off_brake_duration" options.
+  - Added "average_sampling_duration" option, which sets duration (seconds) for calculating average brake temperature from most recent braking period. Default is "10" seconds. Maximum duration is limited to "600" seconds.
+  - Added "off_brake_duration" option, which sets duration (seconds) for continuously updating average brake temperature for a short period after fully released brakes. Default is "1" seconds.
+  - Removed old "highlight_duration", "font_color_highlighted", "bkg_color_highlighted" options.
+
 * Laps and position Widget
-  - Now shows estimated total laps for time-based session (requested by user "Sandriekus"). A "~" sign will be displayed before estimated total laps reading, and up to two decimal places will be kept.
+  - [New]Now shows estimated total laps for time-based session (requested by user "Sandriekus"). A "~" sign will be displayed before estimated total laps reading, and up to two decimal places will be kept.
     Note, estimated total laps reading is calculated based on local player's lap time pace data from Delta Module, which can be different from in-game HUD reading. This reading does not concern about race leader's lap time pace, which means there may be an extra final lap on top of it.
   - Increased "lap_number" bar width by 3 characters to fit with additional digits and decimals from estimated total laps reading.
 
